Fix large profile image not showing. Styling change react emoticons gap

--- a/CLIENT/src/css/PostsComments.css
+++ b/CLIENT/src/css/PostsComments.css
@@ -157,7 +157,13 @@ width: 100%;
 .reaction-options {
   display: flex;
   flex-direction: row;
-  gap: 0.5em;
+  gap: 2em;
+}
+
+.reaction-options-small {
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
 }
 
 @media (max-width: 580px) {
